# vcli

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  app-info.go  appveyor.json  appveyor.yml  appveyor.yml.in  usage-template.go  vcli.go
automation/: .bintray.json  postinst  upload.sh.in  version.go  version.go.in  vorteil.gpg
command/: command-node.go  command.go  node.go  register.go
command/cloud/: command.go  default.go  delete.go  edit.go  gcp.go  infChecker.go  info.go  infrastruct.go  infrastructure.go  list.go  new.go  remove-template.go  upload-template.go  vmwarecmd.go
command/config/: blank.go  command.go  config-editor.go  edit.go  new.go  standard.go
command/config/configui/: configEditor.go
command/repository/: command.go  delete.go  edit-build-config.go  export.go  import.go  list.go  tag.go  untag.go
command/run/: command.go
command/settings/: author-command.go  command.go  hypervisors-default.go  hypervisors-list.go  hypervisors-subcommand.go  kernel-default.go  kernel-download.go  kernel-list.go  kernel-subcommand.go  kernel-update.go
compiler/: args.go  builder.go  compiler.go  ext2.go  google.go  kernel-download.go  ova.go  ovf.go  raw-sparse.go  validation.go  vhd-dynamic.go  vmdk-examiner.go  vmdk-sparse.go  vmdk-stream-optimized.go
compiler/converter/: covertible.go  loose.go  ova.go  rawsparse.go  sparse.go  util.go  vhd.go  zip.go
compiler/fs/: chunk.go  fs.go
compiler/fs/ext2/: bgdt.go  block-groups.go  compile.go  constants.go  inode.go  instructions.go  scan.go  superblock.go  util.go
compiler/fs/ext2/ext2test/: main.go
compiler/rawsparse/: app.go  args.go  builder.go  config.go  contents.go  environment.go  fs.go  gpt.go  grain.go  kernel.go  lba.go  mbr.go  overhead.go  sector.go  sparse.go  stream.go  trampoline.go  util.go
compiler/vmdk/: app.go  args.go  builder.go  config.go  contents.go  environment.go  fs.go  gpt.go  grain.go  kernel.go  lba.go  mbr.go  overhead.go  sector.go  sparse.go  stream.go  trampoline.go  util.go  vhd.go
editor/: callback.go  content.go  editor.go  gui.go  keybinds.go  nav.go  render.go
editor/gcpInf/: gcpInf.go
editor/infrastructure/: infrastructureEditor.go
editor/test/: main.go
home/: defaults-global.go  home.go  kernels.go  utility.go
shared/: build-config.go  constants.go  disk-format-constants.go  external.go  hypervisor-constants.go  infrastructure.go  path-splitter.go  shared_test.go  string-cleaner.go  table.go  vmx.go
shared/relational/: driver.go
vml/: database.go  summary.go  tiny.go  util.go
vml/archiver/: archiver.go  blob.go  contents.go  directory.go
